started my part and prepared a reusable API format

--- a/src/template.html
+++ b/src/template.html
@@ -1,27 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Montserrat:wght@800&display=swap"
-      rel="stylesheet"
-    />
-    <title>Document</title>
 
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Montserrat:wght@800&display=swap"
+    rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/7cbe454c49.js" crossorigin="anonymous"></script>
+  <title>Javascript Capstone Project</title>
+</head>
 
 <body>
-    <h1>title</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis expedita 
-        dignissimos laboriosam repellendus possimus cum, aut iusto vel hic 
-        3minima accusamus odio provident doloribus mollitia. 
-        Aliquam molestiae tempore tenetur ipsa, ullam totam eos 
-        nesciunt id minus nobis voluptates suscipit facilis? 
-        Reprehenderit nihil odit eos id!</p>
+  <h1>title</h1>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis expedita
+    dignissimos laboriosam repellendus possimus cum, aut iusto vel hic
+    3minima accusamus odio provident doloribus mollitia.
+    Aliquam molestiae tempore tenetur ipsa, ullam totam eos
+    nesciunt id minus nobis voluptates suscipit facilis?
+    Reprehenderit nihil odit eos id!</p>
+
+
+
+  <!-- <section class="reservation-body active">
+    <span class="closeBTNbody">
+      <i class="fas fa-arrow-circle-left closeBTN"></i>
+    </span>
+
+    <div class="image-body">
+      <i class="fas fa-arrow-circle-left theImage"></i>
+      <h1>Space What</h1>
+    </div>
+
+    <article class="under-space">
+      <div class="fuel-and-weight">
+        ojmtheimbjtrepo
+      </div>
+      <div class="length-and-power">
+        ebkmpdooo
+      </div>
+    </article>
+  </section> -->
 </body>
 
 </html>
