--- a/src/template.html
+++ b/src/template.html
@@ -14,6 +14,34 @@
 </head>
 
 <body>
+
+  <!-- Navbar items -->
+  <div id="navlist">
+    <a href="#">Delicious Meals</a>
+    <a href="#">Our Menu</a>
+    <a href="#">List</a>
+
+    <!-- search bar right align -->
+    <div class="search">
+      <form action="#">
+        <input type="text" placeholder=" Search your food" name="search">
+        <button>
+          <i class="fa fa-search" style="font-size: 18px;">
+          </i>
+        </button>
+      </form>
+    </div>
+  </div>
+
+  <footer>
+    Copyright ©️ 2022
+    <a class="link" href="https://github.com/masangana">masangana</a>
+    <a class="link" href="https://github.com/Olamarx">Olamarx</a>
+    <a class="link" href="https://github.com/chumaachike">chumaachike</a>
+  </footer>
+
+
+
   <h1>title</h1>
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis expedita
     dignissimos laboriosam repellendus possimus cum, aut iusto vel hic
