--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Montserrat:wght@800&display=swap"
     rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://kit.fontawesome.com/7cbe454c49.js" crossorigin="anonymous"></script>
   <title>Javascript Capstone Project</title>
 </head>
@@ -16,11 +19,11 @@
 <body>
 
   <!-- Navbar items -->
-  <div id="navlist">
+  <nav>
+    <div id="navlist">
     <a href="#">Delicious Meals</a>
     <a href="#">Our Menu</a>
     <a href="#">List</a>
-
     <!-- search bar right align -->
     <div class="search">
       <form action="#">
@@ -32,6 +35,14 @@
       </form>
     </div>
   </div>
+  </nav>
+  
+  <section class="product">
+    <div class="pro-container" id="product">
+    
+    </div>
+  </section>
+
 
   <footer>
     Copyright ©️ 2022
@@ -42,35 +53,7 @@
 
 
 
-  <h1>title</h1>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis expedita
-    dignissimos laboriosam repellendus possimus cum, aut iusto vel hic
-    3minima accusamus odio provident doloribus mollitia.
-    Aliquam molestiae tempore tenetur ipsa, ullam totam eos
-    nesciunt id minus nobis voluptates suscipit facilis?
-    Reprehenderit nihil odit eos id!</p>
 
-
-
-  <!-- <section class="reservation-body active">
-    <span class="closeBTNbody">
-      <i class="fas fa-arrow-circle-left closeBTN"></i>
-    </span>
-
-    <div class="image-body">
-      <i class="fas fa-arrow-circle-left theImage"></i>
-      <h1>Space What</h1>
-    </div>
-
-    <article class="under-space">
-      <div class="fuel-and-weight">
-        ojmtheimbjtrepo
-      </div>
-      <div class="length-and-power">
-        ebkmpdooo
-      </div>
-    </article>
-  </section> -->
 </body>
 
 </html>
