Add main part home page
-- Prepare Comments button
-- Prepare reservation button
-- Create html template
-- Add API call

--- a/src/template.html
+++ b/src/template.html
@@ -39,7 +39,7 @@
   
   <section class="product">
     <div class="pro-container" id="product">
-    
+        <!-- Main DOM here -->
     </div>
   </section>
 
