Started the popup of the reservation

--- a/src/template.html
+++ b/src/template.html
@@ -43,19 +43,21 @@
 
 
   <h1>title</h1>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis expedita
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis expedita
     dignissimos laboriosam repellendus possimus cum, aut iusto vel hic
     3minima accusamus odio provident doloribus mollitia.
     Aliquam molestiae tempore tenetur ipsa, ullam totam eos
     nesciunt id minus nobis voluptates suscipit facilis?
-    Reprehenderit nihil odit eos id!</p>
+    Reprehenderit nihil odit eos id!
+  </p>
 
 
 
-  <!-- <section class="reservation-body active">
-    <span class="closeBTNbody">
+  <section class="reservation-body active">
+    <div class="closeBTNbody">
       <i class="fas fa-arrow-circle-left closeBTN"></i>
-    </span>
+    </div>
 
     <div class="image-body">
       <i class="fas fa-arrow-circle-left theImage"></i>
@@ -63,14 +65,54 @@
     </div>
 
     <article class="under-space">
+
       <div class="fuel-and-weight">
-        ojmtheimbjtrepo
+        <div class="fuel">
+          Fuel: titanium
+        </div>
+        <div class="weight">
+          Weight: 400
+        </div>
+
       </div>
       <div class="length-and-power">
-        ebkmpdooo
+        <div class="length">
+          Length: 100,000
+        </div>
+        <div class="power">
+          Power: 100,000,000
+        </div>
       </div>
+
     </article>
-  </section> -->
+
+    <article class="reservation-comments">
+      <h2 class="reservation-h2">Reservation</h2>
+      <ul class="reservation-ul">
+
+
+
+
+      </ul>
+
+      <h3 class="add-reservation">
+        Add a reservation
+      </h3>
+
+      <form action="#" class="reservation-date-form">
+        <label for="yourName" class="label-it"> Your Name:
+          <input type="text" id="yourName" class="reservation-name-input" placeholder="Your name" required>
+        </label>
+        <label for="startDate" class="label-it"> Start Date:
+          <input type="date" id="startDate" class="reservation-startdate-input" placeholder="Start date" required>
+        </label>
+        <label for="endDate" class="label-it"> End Date:
+          <input type="date" id="endDate" class="reservation-enddate-input" placeholder="End date" required>
+        </label>
+        <input type="submit" class="make-submit">
+      </form>
+    </article>
+  </section>
 </body>
 
 </html>
