Fixed the conflict

--- a/src/template.html
+++ b/src/template.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Montserrat:wght@800&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
-    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://kit.fontawesome.com/7cbe454c49.js" crossorigin="anonymous"></script>
   <title>Javascript Capstone Project</title>
@@ -21,25 +21,25 @@
   <!-- Navbar items -->
   <nav>
     <div id="navlist">
-    <a href="#">Delicious Meals</a>
-    <a href="#">Our Menu</a>
-    <a href="#">List</a>
-    <!-- search bar right align -->
-    <div class="search">
-      <form action="#">
-        <input type="text" placeholder=" Search your food" name="search">
-        <button>
-          <i class="fa fa-search" style="font-size: 18px;">
-          </i>
-        </button>
-      </form>
+      <a href="#">Delicious Meals</a>
+      <a href="#">Our Menu</a>
+      <a href="#">List</a>
+      <!-- search bar right align -->
+      <div class="search">
+        <form action="#">
+          <input type="text" placeholder=" Search your food" name="search">
+          <button>
+            <i class="fa fa-search" style="font-size: 18px;">
+            </i>
+          </button>
+        </form>
+      </div>
     </div>
-  </div>
   </nav>
-  
+
   <section class="product">
     <div class="pro-container" id="product">
-        <!-- Main DOM here -->
+      <!-- Main DOM here -->
     </div>
   </section>
 
@@ -62,7 +62,7 @@
 
 
 
-  <section class="reservation-body active">
+  <section class="reservation-body">
     <div class="closeBTNbody">
       <i class="fas fa-arrow-circle-left closeBTN"></i>
     </div>
