Add the popup function for the Reservation button

--- a/src/template.html
+++ b/src/template.html
@@ -13,6 +13,7 @@
     integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://kit.fontawesome.com/7cbe454c49.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Javascript Capstone Project</title>
 </head>
 
@@ -50,47 +51,19 @@
     <a class="link" href="https://github.com/Olamarx">Olamarx</a>
     <a class="link" href="https://github.com/chumaachike">chumaachike</a>
   </footer>
-  <h1>title</h1>
-  <p>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis expedita
-    dignissimos laboriosam repellendus possimus cum, aut iusto vel hic
-    3minima accusamus odio provident doloribus mollitia.
-    Aliquam molestiae tempore tenetur ipsa, ullam totam eos
-    nesciunt id minus nobis voluptates suscipit facilis?
-    Reprehenderit nihil odit eos id!
-  </p>
 
 
 
   <section class="reservation-body">
     <div class="closeBTNbody">
-      <i class="fas fa-arrow-circle-left closeBTN"></i>
+      <i class="fa fa-close closeBTN"></i>
     </div>
 
     <div class="image-body">
-      <i class="fas fa-arrow-circle-left theImage"></i>
-      <h1>Space What</h1>
+
     </div>
 
     <article class="under-space">
-
-      <div class="fuel-and-weight">
-        <div class="fuel">
-          Fuel: titanium
-        </div>
-        <div class="weight">
-          Weight: 400
-        </div>
-
-      </div>
-      <div class="length-and-power">
-        <div class="length">
-          Length: 100,000
-        </div>
-        <div class="power">
-          Power: 100,000,000
-        </div>
-      </div>
 
     </article>
 
