finished the comment popup

--- a/src/template.html
+++ b/src/template.html
@@ -71,6 +71,11 @@
       </div>
     </article>
   </section> -->
+<div class="categories">
+  <div class="food" dataset="52767"><button class="popup">...</button></div>
+  <div class="food" dataset="52767"><button class="popup">...</button></div>
+  <div class="food" dataset="3"><button class="popup">...</button></div>
+</div>
 </body>
 
 </html>
