add like button

--- a/src/template.html
+++ b/src/template.html
@@ -39,7 +39,7 @@
   </nav>
 
   <section class="product">
-    <h1>Discover our rich menu with 00 plats</h1>
+    <h1 class="coutItem">Discover our rich menu with 00 plats</h1>
     <div class="pro-container" id="product">
       <!-- Main DOM here -->
     </div>
