Set test for comments counter and finished up styling

--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Montserrat:wght@800&display=swap"
     rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@400;700&family=Poppins&family=Roboto:wght@700&display=swap"
+      rel="stylesheet"
+    />
   <script src="https://kit.fontawesome.com/7cbe454c49.js" crossorigin="anonymous"></script>
   <title>Javascript Capstone Project</title>
 </head>
@@ -73,8 +77,8 @@
   </section> -->
 <div class="categories">
   <div class="food" dataset="52767"><button class="popup">...</button></div>
-  <div class="food" dataset="52767"><button class="popup">...</button></div>
-  <div class="food" dataset="3"><button class="popup">...</button></div>
+  <div class="food" dataset="52819"><button class="popup">...</button></div>
+  <div class="food" dataset="53050"><button class="popup">...</button></div>
 </div>
 </body>
 
