build dist file

--- a/src/template.html
+++ b/src/template.html
@@ -39,7 +39,7 @@
   </nav>
 
   <section class="product">
-    <h1 id="coutItem">Discover our rich menu with 00 plats</h1>
+    <h1 id="coutItem"></h1>
     <div class="modalcon">
       
     </div>
